--- a/docker-compose-postgres.yaml
+++ b/docker-compose-postgres.yaml
@@ -1,6 +1,6 @@
 services:
   pg-database:
-    image: postgres:13
+    image: postgres:17.4
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -9,8 +9,9 @@ services:
       - ./ny_taxi_postgres_data:/var/lib/postgresql/data:rw
     ports:
       - 5433:5432
+
   pgadmin:
-    image: dpage/pgadmin4:8.14.0
+    image: dpage/pgadmin4:9.1.0
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=root
@@ -18,3 +19,11 @@ services:
       - ./pgadmin_data:/var/lib/pgadmin:rw
     ports:
       - 8080:80
+
+  # taxi-ingest:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   volumes:
+  #     - .:/app
+  #   entrypoint: ["python", "ingest_data.py"]
