--- a/docker-compose-postgres.yaml
+++ b/docker-compose-postgres.yaml
@@ -1,29 +1,30 @@
 services:
-  pg-database:
-    image: postgres:17.4
+  psql_server:
+    image: postgres:17.4 # latest image at the time of this commit
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=ny_taxi
     volumes:
-      - ./ny_taxi_postgres_data:/var/lib/postgresql/data:rw
+      - ./volumes/psql_data:/var/lib/postgresql/data:rw
     ports:
       - 5433:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
 
   pgadmin:
-    image: dpage/pgadmin4:9.1.0
+    image: dpage/pgadmin4:9.1.0 # latest image at the time of this commit
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=root
     volumes:
-      - ./pgadmin_data:/var/lib/pgadmin:rw
+      - ./volumes/pgadmin_data:/var/lib/pgadmin:rw
     ports:
       - 8080:80
-
-  # taxi-ingest:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - .:/app
-  #   entrypoint: ["python", "ingest_data.py"]
+    depends_on:
+      psql_server:
+        condition: service_started
