--- a/docker-compose-postgres.yaml
+++ b/docker-compose-postgres.yaml
@@ -6,7 +6,7 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=ny_taxi
     volumes:
-      - ./volumes/psql_data:/var/lib/postgresql/data:rw
+      - ./docker_volumes/psql_data:/var/lib/postgresql/data:rw
     ports:
       - 5433:5432
     healthcheck:
@@ -22,7 +22,7 @@ services:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=root
     volumes:
-      - ./volumes/pgadmin_data:/var/lib/pgadmin:rw
+      - ./docker_volumes/pgadmin_data:/var/lib/pgadmin:rw
     ports:
       - 8080:80
     depends_on:
