--- a/kestra_flows/03_postgres_taxi.yaml
+++ b/kestra_flows/03_postgres_taxi.yaml
@@ -1,24 +1,26 @@
 id: 03_postgres_taxi
 namespace: zoomcamp
 description: |
+  This data pipeline is for downloading the New York taxi data from a GitHub repository and wrtie it a
+  PostgreSQL database.
   The CSV Data used in the course: https://github.com/DataTalksClub/nyc-tlc-data/releases
 
 inputs:
   - id: taxi
     type: SELECT
-    displayName: Select taxi type
+    displayName: 'Select taxi type:'
     values: [yellow, green]
     defaults: yellow
 
   - id: year
     type: SELECT
-    displayName: Select year
+    displayName: 'Select year:'
     values: ["2019", "2020"]
     defaults: "2019"
 
   - id: month
     type: SELECT
-    displayName: Select month
+    displayName: 'Select month:'
     values: ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12"]
     defaults: "01"
 
@@ -48,7 +50,7 @@ tasks:
     type: io.kestra.plugin.core.flow.If
     condition: "{{inputs.taxi == 'yellow'}}"
     then:
-      - id: yellow_create_table
+      - id: yellow_create_main_table
         type: io.kestra.plugin.jdbc.postgresql.Queries
         sql: |
           CREATE TABLE IF NOT EXISTS {{render(vars.table)}} (
@@ -130,7 +132,6 @@ tasks:
           - improvement_surcharge
           - total_amount
           - congestion_surcharge
-        # columns: [VendorID, tpep_pickup_datetime, tpep_dropoff_datetime, passenger_count, trip_distance, RatecodeID, store_and_fwd_flag,PULocationID,DOLocationID,payment_type,fare_amount,extra,mta_tax,tip_amount,tolls_amount,improvement_surcharge,total_amount,congestion_surcharge]
 
       - id: yellow_add_unique_id_and_filename
         type: io.kestra.plugin.jdbc.postgresql.Queries
@@ -172,7 +173,7 @@ tasks:
     type: io.kestra.plugin.core.flow.If
     condition: "{{inputs.taxi == 'green'}}"
     then:
-      - id: green_create_table
+      - id: green_create_main_table
         type: io.kestra.plugin.jdbc.postgresql.Queries
         sql: |
           CREATE TABLE IF NOT EXISTS {{render(vars.table)}} (
@@ -260,7 +261,6 @@ tasks:
           - payment_type
           - trip_type
           - congestion_surcharge
-        # columns: [VendorID,lpep_pickup_datetime,lpep_dropoff_datetime,store_and_fwd_flag,RatecodeID,PULocationID,DOLocationID,passenger_count,trip_distance,fare_amount,extra,mta_tax,tip_amount,tolls_amount,ehail_fee,improvement_surcharge,total_amount,payment_type,trip_type,congestion_surcharge]
 
       - id: green_add_unique_id_and_filename
         type: io.kestra.plugin.jdbc.postgresql.Queries
@@ -301,10 +301,11 @@ tasks:
   - id: purge_files
     type: io.kestra.plugin.core.storage.PurgeCurrentExecutionFiles
     description: This will remove output files. If you'd like to explore Kestra outputs, disable it.
+    disabled: false # example for how to disable a stage
 
 pluginDefaults:
   - type: io.kestra.plugin.jdbc.postgresql
     values:
-      url: jdbc:postgresql://host.docker.internal:5432/postgres-zoomcamp
-      username: kestra
-      password: k3str4
+      url: jdbc:postgresql://postgres-zoomcamp:5432/ny_taxi
+      username: postgres
+      password: postgres
