--- a/kestra_flows/04_postgres_taxi_scheduled.yaml
+++ b/kestra_flows/04_postgres_taxi_scheduled.yaml
@@ -10,7 +10,7 @@ concurrency:
 inputs:
   - id: taxi
     type: SELECT
-    displayName: Select taxi type
+    displayName: 'Select taxi type:'
     values: [yellow, green]
     defaults: yellow
 
@@ -40,7 +40,7 @@ tasks:
     type: io.kestra.plugin.core.flow.If
     condition: "{{inputs.taxi == 'yellow'}}"
     then:
-      - id: yellow_create_table
+      - id: yellow_create_main_table
         type: io.kestra.plugin.jdbc.postgresql.Queries
         sql: |
           CREATE TABLE IF NOT EXISTS {{render(vars.table)}} (
@@ -122,7 +122,6 @@ tasks:
           - improvement_surcharge
           - total_amount
           - congestion_surcharge
-        # columns: [VendorID,tpep_pickup_datetime,tpep_dropoff_datetime,passenger_count,trip_distance,RatecodeID,store_and_fwd_flag,PULocationID,DOLocationID,payment_type,fare_amount,extra,mta_tax,tip_amount,tolls_amount,improvement_surcharge,total_amount,congestion_surcharge]
 
       - id: yellow_add_unique_id_and_filename
         type: io.kestra.plugin.jdbc.postgresql.Queries
@@ -164,7 +163,7 @@ tasks:
     type: io.kestra.plugin.core.flow.If
     condition: "{{inputs.taxi == 'green'}}"
     then:
-      - id: green_create_table
+      - id: green_create_main_table
         type: io.kestra.plugin.jdbc.postgresql.Queries
         sql: |
           CREATE TABLE IF NOT EXISTS {{render(vars.table)}} (
@@ -240,7 +239,7 @@ tasks:
           - PULocationID
           - DOLocationID
           - passenger_count
-          - trip_distance,
+          - trip_distance
           - fare_amount
           - extra
           - mta_tax
@@ -252,7 +251,6 @@ tasks:
           - payment_type
           - trip_type
           - congestion_surcharge
-        # columns: [VendorID,lpep_pickup_datetime,lpep_dropoff_datetime,store_and_fwd_flag,RatecodeID,PULocationID,DOLocationID,passenger_count,trip_distance,fare_amount,extra,mta_tax,tip_amount,tolls_amount,ehail_fee,improvement_surcharge,total_amount,payment_type,trip_type,congestion_surcharge]
 
       - id: green_add_unique_id_and_filename
         type: io.kestra.plugin.jdbc.postgresql.Queries
@@ -297,9 +295,9 @@ tasks:
 pluginDefaults:
   - type: io.kestra.plugin.jdbc.postgresql
     values:
-      url: jdbc:postgresql://host.docker.internal:5432/postgres-zoomcamp
-      username: kestra
-      password: k3str4
+      url: jdbc:postgresql://postgres-zoomcamp:5432/ny_taxi
+      username: postgres
+      password: postgres
 
 triggers:
   - id: green_schedule
