--- a/kestra_flows/07_gcp_setup.yaml
+++ b/kestra_flows/07_gcp_setup.yaml
@@ -1,5 +1,6 @@
 id: 07_gcp_setup
 namespace: zoomcamp
+description: This workflow is to create a bucket in Google Cloud Platform
 
 tasks:
   - id: create_gcs_bucket
@@ -16,7 +17,7 @@ tasks:
 pluginDefaults:
   - type: io.kestra.plugin.gcp
     values:
-      serviceAccount: "{{kv('GCP_CREDS')}}"
+      serviceAccount: "{{kv('GCP_KESTRA_SVC_ACC')}}"
       projectId: "{{kv('GCP_PROJECT_ID')}}"
       location: "{{kv('GCP_LOCATION')}}"
       bucket: "{{kv('GCP_BUCKET_NAME')}}"
