--- a/kestra_flows/09_gcp_taxi_scheduled.yaml
+++ b/kestra_flows/09_gcp_taxi_scheduled.yaml
@@ -7,7 +7,7 @@ description: |
 inputs:
   - id: taxi
     type: SELECT
-    displayName: Select taxi type
+    displayName: 'Select taxi type:'
     values: [yellow, green]
     defaults: green
 
@@ -229,7 +229,7 @@ tasks:
 pluginDefaults:
   - type: io.kestra.plugin.gcp
     values:
-      serviceAccount: "{{kv('GCP_CREDS')}}"
+      serviceAccount: "{{kv('GCP_KESTRA_SVC_ACC')}}"
       projectId: "{{kv('GCP_PROJECT_ID')}}"
       location: "{{kv('GCP_LOCATION')}}"
       bucket: "{{kv('GCP_BUCKET_NAME')}}"
