--- a/kestra_flows/02_postgres_taxi.yaml
+++ b/kestra_flows/02_postgres_taxi.yaml
@@ -1,7 +1,7 @@
 id: 02_postgres_taxi
 namespace: zoomcamp
 description: |
-  This data pipeline is to download the New York taxi data from a GitHub repository and wrtie it a
+  This data pipeline is to download the New York taxi data from a GitHub repository and wrtie it to a
   PostgreSQL database.
   The CSV Data used in the course: https://github.com/DataTalksClub/nyc-tlc-data/releases
 
@@ -15,7 +15,7 @@ inputs:
   - id: year
     type: SELECT
     displayName: 'Select year:'
-    values: ["2019", "2020"]
+    values: ["2019", "2020", "2021"]
     defaults: "2019"
 
   - id: month
@@ -133,6 +133,14 @@ tasks:
           - total_amount
           - congestion_surcharge
 
+      - id: yellow_clean_up_staging_table
+        # cleaning up the data that are outside the time range
+        type: io.kestra.plugin.jdbc.postgresql.Queries
+        sql: |
+          DELETE FROM {{render(vars.staging_table)}}
+          WHERE EXTRACT(MONTH FROM tpep_pickup_datetime) != CAST('{{inputs.month}}' AS INTEGER)
+            OR EXTRACT(YEAR FROM tpep_pickup_datetime) != CAST('{{inputs.year}}' AS INTEGER);
+
       - id: yellow_add_unique_id_and_filename
         type: io.kestra.plugin.jdbc.postgresql.Queries
         sql: |
@@ -157,16 +165,48 @@ tasks:
           ON T.unique_row_id = S.unique_row_id
           WHEN NOT MATCHED THEN
             INSERT (
-              unique_row_id, filename, VendorID, tpep_pickup_datetime, tpep_dropoff_datetime,
-              passenger_count, trip_distance, RatecodeID, store_and_fwd_flag, PULocationID,
-              DOLocationID, payment_type, fare_amount, extra, mta_tax, tip_amount, tolls_amount,
-              improvement_surcharge, total_amount, congestion_surcharge
+              unique_row_id,
+              filename,
+              VendorID,
+              tpep_pickup_datetime,
+              tpep_dropoff_datetime,
+              passenger_count,
+              trip_distance,
+              RatecodeID,
+              store_and_fwd_flag,
+              PULocationID,
+              DOLocationID,
+              payment_type,
+              fare_amount,
+              extra,
+              mta_tax,
+              tip_amount,
+              tolls_amount,
+              improvement_surcharge,
+              total_amount,
+              congestion_surcharge
             )
             VALUES (
-              S.unique_row_id, S.filename, S.VendorID, S.tpep_pickup_datetime, S.tpep_dropoff_datetime,
-              S.passenger_count, S.trip_distance, S.RatecodeID, S.store_and_fwd_flag, S.PULocationID,
-              S.DOLocationID, S.payment_type, S.fare_amount, S.extra, S.mta_tax, S.tip_amount, S.tolls_amount,
-              S.improvement_surcharge, S.total_amount, S.congestion_surcharge
+              S.unique_row_id,
+              S.filename,
+              S.VendorID,
+              S.tpep_pickup_datetime,
+              S.tpep_dropoff_datetime,
+              S.passenger_count,
+              S.trip_distance,
+              S.RatecodeID,
+              S.store_and_fwd_flag,
+              S.PULocationID,
+              S.DOLocationID,
+              S.payment_type,
+              S.fare_amount,
+              S.extra,
+              S.mta_tax,
+              S.tip_amount,
+              S.tolls_amount,
+              S.improvement_surcharge,
+              S.total_amount,
+              S.congestion_surcharge
             );
 
   - id: if_green_taxi
@@ -262,6 +302,14 @@ tasks:
           - trip_type
           - congestion_surcharge
 
+      - id: green_clean_up_staging_table
+        # cleaning up the data that are outside the time range
+        type: io.kestra.plugin.jdbc.postgresql.Queries
+        sql: |
+          DELETE FROM {{render(vars.staging_table)}}
+          WHERE EXTRACT(MONTH FROM lpep_pickup_datetime) != CAST('{{inputs.month}}' AS INTEGER)
+            OR EXTRACT(YEAR FROM lpep_pickup_datetime) != CAST('{{inputs.year}}' AS INTEGER);
+
       - id: green_add_unique_id_and_filename
         type: io.kestra.plugin.jdbc.postgresql.Queries
         sql: |
@@ -286,16 +334,51 @@ tasks:
           ON T.unique_row_id = S.unique_row_id
           WHEN NOT MATCHED THEN
             INSERT (
-              unique_row_id, filename, VendorID, lpep_pickup_datetime, lpep_dropoff_datetime,
-              store_and_fwd_flag, RatecodeID, PULocationID, DOLocationID, passenger_count,
-              trip_distance, fare_amount, extra, mta_tax, tip_amount, tolls_amount, ehail_fee,
-              improvement_surcharge, total_amount, payment_type, trip_type, congestion_surcharge
+              unique_row_id,
+              filename, VendorID,
+              lpep_pickup_datetime,
+              lpep_dropoff_datetime,
+              store_and_fwd_flag,
+              RatecodeID,
+              PULocationID,
+              DOLocationID,
+              passenger_count,
+              trip_distance,
+              fare_amount,
+              extra,
+              mta_tax,
+              tip_amount,
+              tolls_amount,
+              ehail_fee,
+              improvement_surcharge,
+              total_amount,
+              payment_type,
+              trip_type,
+              congestion_surcharge
             )
             VALUES (
-              S.unique_row_id, S.filename, S.VendorID, S.lpep_pickup_datetime, S.lpep_dropoff_datetime,
-              S.store_and_fwd_flag, S.RatecodeID, S.PULocationID, S.DOLocationID, S.passenger_count,
-              S.trip_distance, S.fare_amount, S.extra, S.mta_tax, S.tip_amount, S.tolls_amount, S.ehail_fee,
-              S.improvement_surcharge, S.total_amount, S.payment_type, S.trip_type, S.congestion_surcharge
+              S.unique_row_id,
+              S.filename,
+              S.VendorID,
+              S.lpep_pickup_datetime,
+              S.lpep_dropoff_datetime,
+              S.store_and_fwd_flag,
+              S.RatecodeID,
+              S.PULocationID,
+              S.DOLocationID,
+              S.passenger_count,
+              S.trip_distance,
+              S.fare_amount,
+              S.extra,
+              S.mta_tax,
+              S.tip_amount,
+              S.tolls_amount,
+              S.ehail_fee,
+              S.improvement_surcharge,
+              S.total_amount,
+              S.payment_type,
+              S.trip_type,
+              S.congestion_surcharge
             );
 
   - id: purge_files
